<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.MainActivity">

    <android.support.v7.widget.RecyclerView
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/recipes_wrapper"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        />

</LinearLayout>
