...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/step_description_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_padding_size_small"
        android:layout_marginEnd="@dimen/margin_padding_size_small"
        android:layout_marginRight="@dimen/margin_padding_size_small"
        android:paddingVertical="@dimen/margin_padding_size_small"
...
